Move footer from a separate file to the base template, add privacy policy to the footer and add support for optional footercontent.

--- a/templates/base.html
+++ b/templates/base.html
@@ -102,7 +102,16 @@
                 {% endblock %}
             </div>
             {% block footer %}
-                {% include "footer.html" %}
+            <footer class="footer">
+
+                <div class="container">
+                <small>
+                    {% block footercontent %}{% endblock %}
+                    <p><a href="{% url views.privacy %}">Privacy</a></p>
+                </small>
+                </div>
+
+            </footer>
             {% endblock %}
         </div>
     </body>
