--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -157,3 +157,7 @@ ul.exercise_rounds li.exercise_round:last-child {
 .progress .required-score {
     background-color: red;
 }
+
+.footer {
+    border-top: 1px solid #E5E5E5;
+}
