--- a/templates/aaltoplus/home.html
+++ b/templates/aaltoplus/home.html
@@ -9,14 +9,12 @@
 <div class="hero-unit">
     {% blocktrans %}
     <p>
-        A+ is a service for managing the learning activities on courses at 
-        <a href='http://www.aalto.fi'>Aalto University</a>. The system is designed for 
+        A+ is a service for managing the learning activities. The system is designed for 
         improving the interoperability of various e-learning systems by connecting them
-        with a service-oriented approach. 
-    </p>
-    <p>
-        This <strong>prototype version</strong> of A+ supports grading of exercises through <a href="https://greengoblin.cs.hut.fi/">Goblin</a>
-        and <a href="https://trakla.cs.hut.fi/">TRAKLA2</a>.
+        with a service-oriented approach.
+
+        A+ is in <strong>beta</strong> and we need your help to move forward. Please
+        tell us if you observe unexpected behavior. 
     </p>
     {% endblocktrans %}
 </div>
@@ -29,9 +27,11 @@
     {% endif %}
     <div class="span4">
         <h3><a href="{{ instance.get_absolute_url }}">{{ instance.course.name }}</a></h3>
+        {% comment %}
         <p>
             Vestibulum id ligula porta felis euismod semper. Integer posuere erat a ante venenatis dapibus posuere velit aliquet. Duis mollis, est non commodo luctus, nisi erat porttitor ligula, eget lacinia odio sem nec elit.
         </p>
+        {% endcomment %}
         <p>
             <a href="{{ instance.get_absolute_url }}" class="btn">{{ instance.instance_name }} &raquo;</a>
         </p>
@@ -42,17 +42,12 @@
     </div><!-- .row -->
     {% endif %}
 {% endfor %}
-<hr />
-<div class="row">
-    <div class="span12">
-        <p>
-            {% trans "Old courses can be found at the" %}
-            <a href="{% url course.views.course_archive %}">{% trans "course archive" %}</a>.
-        </p>
-    </div>
-</div>
 
 {% endblock %}
 
-{% block "footer" %}
+{% block footercontent %}        
+    <p>
+        {% trans "Old courses can be found at the" %} <a href="{% url course.views.course_archive %}">
+        {% trans "course archive" %}</a>.
+    </p>
 {% endblock %}
