--- a/templates/course/view_my_page.html
+++ b/templates/course/view_my_page.html
@@ -5,20 +5,24 @@
 {% block coursecontent %}
 <div class="row">
     <div class="span5">
-        <h2>{{ user.first_name }} {{ user.last_name }} <small>{{ user.username }}</small></h2>
-        <p><img src="{{ user.get_profile.avatar_url }}" alt="avatar" /></p>
-        <p>
+        <p class="pull-right"><img src="{{ user.get_profile.avatar_url }}" alt="avatar" /></p>
+        <h2>{{ user.first_name }} {{ user.last_name }}</h2>
+        <dl class="dl-horizontal">
+            <dt>{% trans "student-id" %}</dt><dd>{{user.get_profile.student_id}}</dd>
+            <dt>{% trans "email" %}</dt><dd>{{user.email}}</dd>
+            <dt>{% trans "username" %}</dt><dd>{{user.username}}</dd>
+         </dl>
+
+        <div class="alert alert-info clearfix">
             {% blocktrans with email=user.email %}
-            You can change your avatar icon at <a href="http://gravatar.com">gravatar.com</a>.
-            Use your e-mail address <strong>{{ email }}</strong> when registering your account.
-            {% endblocktrans %}
-        </p>
-        <div class="alert alert-info">
-            {% blocktrans %}
-                To change your settings, such as <strong>e-mail</strong> address or <strong>password</strong>,
-                you must update them on your identity provider.
-                In this prototype, the Shibboleth system has not been configured,
-                and settings can only be changed by administrators.
+                <p> You can change your avatar icon
+                at <a href="http://gravatar.com">gravatar.com</a>.
+                Use your e-mail address <strong>{{ email }}</strong>
+                when registering your account.</p>
+                <p>To change your settings, such
+                as <strong>e-mail</strong> address
+                or <strong>password</strong>, you must update them on
+                your identity provider.</p>
             {% endblocktrans %}
         </div>
     </div>
