This time the logout view might even work

--- a/templates/aaltoplus/logout.html
+++ b/templates/aaltoplus/logout.html
@@ -10,4 +10,9 @@
     {% trans "You have successfully logged out." %}
     {% trans "Please close the browser if you were using a public computer to clear your remaining sessions." %}
 </div>
+
+{% if sso_logout_url %}
+<iframe src="{{ sso_logout_url }}" style="display: none;"></iframe>
+{% endif %}
+
 {% endblock %}
