--- a/templates/base.html
+++ b/templates/base.html
@@ -72,7 +72,7 @@
                                 <li><a href="{% url userprofile.views.view_groups %}">{% trans "Join or create a group"%}</a></li>
                             </ul>
                         </li>
-                        <li><a href="{% url django.contrib.auth.views.logout %}">{% trans "Log out"%}.</a></li>
+                        <li><a href="{% url logout %}">{% trans "Log out"%}.</a></li>
                     {% endif %}
                 </ul>
             </div>
