Switch to the  minified version of Bootstrap.

--- a/templates/500.html
+++ b/templates/500.html
@@ -4,8 +4,8 @@
         <meta charset="utf-8" />
         <title>A+</title>
         <script type="text/javascript" src="/static/js/jquery.min.js"></script>
-        <link rel="stylesheet" href="/static/bootstrap/css/bootstrap.css" type="text/css" media="screen, projection" />
-        <script type="text/javascript" src="/static/bootstrap/js/bootstrap.js"></script>
+        <link rel="stylesheet" href="/static/bootstrap/css/bootstrap.min.css" type="text/css" media="screen, projection" />
+        <script type="text/javascript" src="/static/bootstrap/js/bootstrap.min.js"></script>
         <link rel="stylesheet" href="/static/css/submission.css" type="text/css" />
         <link rel="stylesheet" type="text/css" href="/static/css/main.css" />
         <script type="text/javascript" src="/static/js/aaltoplus.js"></script>
