--- a/templates/base.html
+++ b/templates/base.html
@@ -9,8 +9,8 @@
         
         <script type="text/javascript" src="{{ STATIC_URL }}js/jquery.min.js"></script>
         
-        <link rel="stylesheet" href="{{ STATIC_URL }}bootstrap/css/bootstrap.css" type="text/css" media="screen, projection" />
-        <script type="text/javascript" src="{{ STATIC_URL }}bootstrap/js/bootstrap.js"></script>
+        <link rel="stylesheet" href="{{ STATIC_URL }}bootstrap/css/bootstrap.min.css" type="text/css" media="screen, projection" />
+        <script type="text/javascript" src="{{ STATIC_URL }}bootstrap/js/bootstrap.min.js"></script>
         
         <link rel="stylesheet" href="{{ STATIC_URL }}css/submission.css" type="text/css" />
         
