Corrected spelling error

--- a/templates/aaltoplus/login.html
+++ b/templates/aaltoplus/login.html
@@ -18,7 +18,7 @@
 	</p>
 </div>
 
-<h3>Alternativle, you can log in with your A+ specific account</h3>
+<h3>Alternatively, you can log in with your A+ specific account</h3>
 <form method="post" action="">{% csrf_token %}
 	<div class="clearfix">
 		{{ form.username.label_tag }}
