Ehanced login page according to Teemu's awesome designer instincts

--- a/templates/aaltoplus/login.html
+++ b/templates/aaltoplus/login.html
@@ -32,7 +32,7 @@
 	</div>
 
 	<div class="actions">
-		<input type="submit" value="{% trans "Login" %}" class="btn btn-primary" />
+		<input type="submit" value="{% trans "Login" %}" class="btn" />
 		<input type="hidden" name="next" value="{{ next }}" />
 	</div>
 </form>
