Honor code updated on register page.

--- a/templates/shibboleth/register.html
+++ b/templates/shibboleth/register.html
@@ -12,14 +12,17 @@
 <h2>Register for A+ Service</h2>
 <form method="post" action=".">{% csrf_token %}
   <div>
-      <p>By registering for this A+ service:</p>
+      <p>By registering on this A+ service I approve the course honor code and privacy policy:</p>
+  
+      <h3>Course Honor Code</h3>
       <ul>
-        <li>I confirm that the work I submit to the assignments is my own,</li>
-        <li>I will not release my solutions to the assignments publicly,</li> 
-        <li>I understand that if someone else submits my work as his own, course staff cannot ensure who was the original author and the same consequences are applied to all parties of the plagiarism,    
-        <li>I follow <a href="https://into.aalto.fi/display/enregulations/Aalto+University+Code+of+Academic+Integrity+and+Handling+Violations+Thereof#AaltoUniversityCodeofAcademicIntegrityandHandlingViolationsThereof-3.3Fraudulentmeansinstudying" target="_blank">Aalto University Code of Academic Integrity</a>.</li>
+        <li>I confirm that the work I submit to the assignments is my own.</li>
+        <li>I will not release my solutions to the assignments publicly.</li> 
+        <li>I also understand that if someone else submits my work as his own, the course staff cannot ensure who was the original author and that the same consequences can be applied to all parties involved.    
+        <li>I am aware of and follow <a href="https://into.aalto.fi/display/enregulations/Aalto+University+Code+of+Academic+Integrity+and+Handling+Violations+Thereof#AaltoUniversityCodeofAcademicIntegrityandHandlingViolationsThereof-3.3Fraudulentmeansinstudying" target="_blank">Aalto University Code of Academic Integrity</a>.</li>
       </ul>
 
+      <h3>Privacy policy</h3>
       A+ stores some personal information as explained in the <a href="privacy-policy.html">privacy policy</a>.
         
       {% comment %}
