--- a/templates/course/view_instance.html
+++ b/templates/course/view_instance.html
@@ -44,6 +44,9 @@
                 <p><span class="dates">{{ round_summary.exercise_round.opening_time }} &ndash; {{ round_summary.exercise_round.closing_time }}</span></p>
                  
                 <div class="table-container">
+                	{% autoescape off %}
+	                <div class="exercise_round_introduction">{{ round_summary.exercise_round.introduction }}</div>
+                	{% endautoescape %}
                     {% if round_summary.exercise_summaries %}
                     <table class="table table-striped table-bordered table-condensed exercise_units">
                         <thead>
