Do not sanitize submissions and exercises. Sanitizing limits feedback too much and the content is from the teacher who could anyhow inject scripts to other pages viewed by the student.

--- a/templates/exercise/view_exercise.html
+++ b/templates/exercise/view_exercise.html
@@ -3,7 +3,7 @@
 {% load i18n %}
 
 {% block exercisecontent %}
-    {{ page.content|sanitize }}
+    {{ page.content }}
     {% if form %}
     <div>
         {% include "exercise/_submission_form.html" with form=form %}
