--- a/templates/exercise/view_exercise.html
+++ b/templates/exercise/view_exercise.html
@@ -2,8 +2,8 @@
 {% load sanitizer %}
 {% load i18n %}
 
-{% block exercisecontent|sanitize %}
-    {{ page.content }}
+{% block exercisecontent %}
+    {{ page.content|sanitize }}
     {% if form %}
     <div>
         {% include "exercise/_submission_form.html" with form=form %}
