--- a/templates/course/view_instance.html
+++ b/templates/course/view_instance.html
@@ -44,6 +44,16 @@
                 <p><span class="dates">{{ round_summary.exercise_round.opening_time }} &ndash; {{ round_summary.exercise_round.closing_time }}</span></p>
                  
                 <div class="table-container">
+                	<div class="progress{% if round_summary.is_passed %} progress-success{% else %} progress-danger{% endif %} progress-striped">
+		                <div class="bar" style="width: {{ round_summary.get_completed_percentage }}%;"
+		                     data-placement="below" rel="tooltip" title="{% trans "Your points" %}: {{ round_summary.get_total_points }}"></div>
+		                <a href="#"
+		                   class="score-barrier required-score"
+		                   style="left: {{ round_summary.get_required_percentage }}%"
+		                   rel="tooltip"
+		                   data-placement="bottom"
+		                   title="{% trans "Points required to pass" %}: {{ round_summary.exercise_round.points_to_pass }}"></a>
+	                </div>
                 	{% autoescape off %}
 	                <div class="exercise_round_introduction">{{ round_summary.exercise_round.introduction }}</div>
                 	{% endautoescape %}
