--- a/templates/exercise/view_submission.html
+++ b/templates/exercise/view_submission.html
@@ -24,3 +24,8 @@
     {% endif %}
 
 {% endblock %}
+
+{% block exerciseinfo %}
+    {{block.super}}
+    {% include 'exercise/_submission_info.html' %}
+{% endblock %}
