Cosmetic changes related to privacy policy. Also made a sticky footer with cool opaque background.

--- a/templates/base.html
+++ b/templates/base.html
@@ -86,7 +86,7 @@ TODO: implement groups
     </div>
 </div>
 {% endblock %}
-            <div class="container">
+            <div id="main_content" class="container">
                 <div class="row">
                     <div class="span12">
                         <div class="page-header">
@@ -113,7 +113,7 @@ TODO: implement groups
                 <div class="container">
                     <small>
                         {% block footercontent %}{% endblock %}
-                        <p><a href="{% url views.privacy %}">Privacy</a></p>
+                        <p><a href="{% url privacy_policy %}">Privacy Policy</a></p>
                     </small>
                 </div>
 
