--- a/templates/aaltoplus/login.html
+++ b/templates/aaltoplus/login.html
@@ -11,7 +11,7 @@
 	<h2>Log in with Aalto WebLogin</h2>
 	<p>Click the button below to log in with Aalto University's Shibboleth service. You may want to read our privacy
 		policy
-		<a href="{% url privacy %}">here</a>.
+		<a href="{% url privacy_policy %}">here</a>.
 	</p>
 	<p>
 		<a class="btn btn-primary" href="{% url shib_login %}">Aalto WebLogin</a>
