Incorrect links, students ids in results table and typos fixed - from production.

--- a/templates/aaltoplus/home.html
+++ b/templates/aaltoplus/home.html
@@ -14,7 +14,7 @@
         with a service-oriented approach.
 
         A+ is in <strong>beta</strong> and we need your help to move forward. Please
-        tell us if you observe unexpected behavior. 
+        inform the course staff if you observe unexpected behavior. 
     </p>
     {% endblocktrans %}
 </div>
