--- a/templates/shibboleth/register.html
+++ b/templates/shibboleth/register.html
@@ -23,7 +23,7 @@
       </ul>
 
       <h3>Privacy policy</h3>
-      A+ stores some personal information as explained in the <a href="privacy-policy.html">privacy policy</a>.
+      A+ stores some personal information as explained in the <a href="https://plus.cs.hut.fi/privacy-policy" target="_blank">privacy policy</a>.
         
       {% comment %}
       I consent my Identity Provider to release the following attributes to A+:
