Added course module's points to pass to the UI. It was not shown anywhere.

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -194,3 +194,7 @@ ul.exercise_rounds li.exercise_round:last-child {
 .progress .required-score {
     background-color: red;
 }
+
+.nowrap {
+    white-space: nowrap;
+}
