Changed the colors of the exercise buttons showing the status. 1) Gray means the exercise is not submitted and there is no pass limit 2) Red means the exercise is submitted but the exercise is not passed 3) Orange means the exercise is passed but not full points 4) Green means the exercise is passed with full points

--- a/templates/course/view_instance.html
+++ b/templates/course/view_instance.html
@@ -15,11 +15,14 @@
                     {% for exercise_summary in round_summary.exercise_summaries %}
                         <a href="{{ exercise_summary.exercise.get_absolute_url }}"
                             class="btn 
-                                {% if exercise_summary.is_full_points %}
-                                    btn-success
+                                {% if not exercise_summary.is_passed %}
+                                    btn-danger
                                 {% else %}
-                                    {% if exercise_summary.is_passed %}
-                                        btn-info
+                                    {% if exercise_summary.is_full_points %}
+                                        btn-success
+                                    {% endif %}
+                                    {% if not exercise_summary.is_full_points and exercise_summary.is_submitted%}
+                                        btn-warning
                                     {% endif %}
                                 {% endif %}"
                                 {# Django 1.3 does not support elif #}
