Minor UI improvements

--- a/templates/base.html
+++ b/templates/base.html
@@ -78,7 +78,7 @@ TODO: implement groups
                             </ul>
                         </li>
                         {% endcomment %}
-                        <li><a href="{% url logout %}">{% trans "Log out"%}.</a></li>
+                        <li><a href="{% url logout %}">{% trans "Log out"%}</a></li>
                     {% endif %}
                 </ul>
             </div>
