--- a/templates/course/view_instance.html
+++ b/templates/course/view_instance.html
@@ -75,9 +75,9 @@
                                 <tr>
                                     <td>
                                     {% if round_summary.exercise_round.is_after_open or is_teacher or is_assistant %}
-                                        <a href="{{ exercise_summary.exercise.get_absolute_url }}">{{ exercise_summary.exercise.name }}</a>
+                                        <a href="{{ exercise_summary.exercise.get_absolute_url }}">{{ exercise_summary.exercise.order }}. {{ exercise_summary.exercise.name }}</a>
                                     {% else %}
-                                        {{ forloop.counter }}. {{exercise_summary.exercise.name}}
+                                        {{ exercise_summary.exercise.order }}. {{exercise_summary.exercise.name}}
                                     {% endif %}
                                     </td>
                                     <td style="text-align: right">{{ exercise_summary.get_points }} / {{ exercise_summary.get_max_points }}</td>
