Went through all the views in course.views and put authorization to those. Also put authorization to the main view. It looks quite ugly to me. There is redundant code for example. This should be improved.

--- a/templates/course/view.html
+++ b/templates/course/view.html
@@ -9,7 +9,7 @@
 
 {% block content %}
 <ul>
-{% for instance in course.instances.all %}
+{% for instance in instances %}
     <li>
         <a href="{{ instance.get_absolute_url }}">{{ instance.instance_name }}</a>
         {% if instance.is_open %}
