CourseInstance visibility should now be correct in all the views. Added some helper functions and methods for DRY. Tested locally in most obvious cases.

--- a/templates/aaltoplus/home.html
+++ b/templates/aaltoplus/home.html
@@ -19,7 +19,7 @@
     {% endblocktrans %}
 </div>
 
-{% for instance in open_instances %}
+{% for instance in instances %}
     {# Output a beginning row on every third instance #}
     {% if forloop.counter0|divisibleby:3 %}
     <div class="row">
