--- a/templates/course/teachers_view.html
+++ b/templates/course/teachers_view.html
@@ -4,6 +4,30 @@
 {% block coursecontent %}
 
 <h2>{% trans "Teachers' view" %}</h2>
+
+<table class="table table-striped table-bordered table-condensed">
+    <thead>
+        <tr>
+            <th><h3>{% trans "Categories" %}</h3></th>
+        </tr>
+    </thead>
+    <tbody>
+    {% for category in instance.categories.all %}
+        <tr>
+            <th>
+                <strong>{{ category.name }}</strong>
+            </th>
+        </tr>
+    {% endfor %}
+    </tbody>
+</table>
+
+<a href="/admin/exercise/learningobjectcategory/"
+   class="btn btn-primary btn-mini">
+    <i class="icon-plus-sign icon-white"></i> {% trans "Edit categories" %}
+</a> (You need to be a superuser)
+
+
 <table class="table table-striped table-bordered table-condensed">
     <thead>
         <tr>
