feedback button added

--- a/templates/base.html
+++ b/templates/base.html
@@ -120,5 +120,13 @@ TODO: implement groups
             </footer>
             {% endblock %}
         </div>
+<script type="text/javascript">
+  var uvOptions = {};
+  (function() {
+    var uv = document.createElement('script'); uv.type = 'text/javascript'; uv.async = true;
+    uv.src = ('https:' == document.location.protocol ? 'https://' : 'http://') + 'widget.uservoice.com/Hr8hbmtp1R4CQv7XTBS6Gg.js';
+    var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(uv, s);
+  })();
+</script>
     </body>
 </html>
