--- a/templates/course/view_instance.html
+++ b/templates/course/view_instance.html
@@ -40,7 +40,7 @@
                     <h3>
                         <i class="icon-chevron-right"></i>
                         <i class="icon-chevron-down"></i>
-                        {{ forloop.counter }}. {{ round_summary.exercise_round.name }}
+                        {{ round_summary.exercise_round.name }}
                         <small class="nowrap">
                             {{ round_summary.get_total_points }} / {{ round_summary.get_maximum_points }} {% trans "points" %}
                             {% if round_summary.exercise_round.points_to_pass > 0 %}(required to pass: {{ round_summary.exercise_round.points_to_pass }}){% endif %}
