--- a/templates/course/view_instance.html
+++ b/templates/course/view_instance.html
@@ -118,8 +118,16 @@
                 <div
                 class="progress {% if category_summary.is_passed %}progress-success{% else %}progress-info{% endif %} progress-striped"
                 style="position: relative">
-                <div class="bar" style="width: {{ course_summary.get_completed_percentage }}%;"
-                    data-placement="below" rel="tooltip" title="{% trans "Your points" %}: {{ category_summary.get_total_points }}"></div>
+                    <div class="bar" style="width: {{ category_summary.get_completed_percentage }}%;"
+                        data-placement="below" rel="tooltip" title="{% trans "Your points" %}: {{ category_summary.get_total_points }}"></div>
+                    {% if category_summary.category.points_to_pass > 0 %}
+                        <a href="#"
+                           class="score-barrier required-score"
+                           style="left: {{ category_summary.get_required_percentage }}%"
+                           rel="tooltip"
+                           data-placement="bottom"
+                           title="{% trans "Points required to pass" %}: {{ category_summary.category.points_to_pass }}"></a>
+                    {% endif %}
                 </div>
             </div>
         {% endfor %}
