A working draft/example/suggestion for a plugin architecture with named views and plugin context and iframe plugin pointing straight to the service url with the plugin context available in the url parameters.

--- a/templates/exercise/view_submission.html
+++ b/templates/exercise/view_submission.html
@@ -28,4 +28,5 @@
 {% block exerciseinfo %}
     {{block.super}}
     {% include 'exercise/_submission_info.html' %}
+    {% include 'plugins/submission_view_plugins.html' %}
 {% endblock %}
