--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -203,3 +203,11 @@ ul.exercise_rounds li.exercise_round:last-child {
 .nowrap {
     white-space: nowrap;
 }
+
+/******************************************************************************
+** APPS ***********************************************************************
+******************************************************************************/
+
+iframe.iframe-plugin {
+    border: none;
+}
